eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/PSP_II_Kolok_12.build.log
14:23:08 **** Rebuild of configuration Debug for project PSP_II_Kolok_12 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
..\main.cpp:124:8: error: conflicting return type specified for 'virtual float StanbenProstor::presmetaj_cena()'
  float presmetaj_cena(){
        ^~~~~~~~~~~~~~
..\main.cpp:69:14: error:   overriding 'virtual int Prostor::presmetaj_cena()'
  virtual int presmetaj_cena(){
              ^~~~~~~~~~~~~~
..\main.cpp: In function 'int main()':
..\main.cpp:145:35: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
  *p= new Prostor("Karposh",62,1200);
                                   ^
..\main.cpp:146:35: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
  *p = new Prostor("Centar",70,1300);
                                   ^
..\main.cpp:147:31: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
  *p = new Prostor("KV",90,1000);
                               ^
..\main.cpp:148:47: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
  *p = new MaloprodazenProstor("David",21,100,4);
                                               ^
..\main.cpp:149:44: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
  *p = new StanbenProstor("Kristina",15,50,3);
                                            ^

14:23:08 Build Failed. 2 errors, 5 warnings. (took 487ms)

